# fract_ol

./: CMakeLists.txt  Makefile  README.md  fractol
Includes/: fractol.h
Srcs/: ancients.c  ancients_point.c  burning_ship.c  burning_ship_point.c  drawing.c  errors.c  fish.c  fish_point.c  julia.c  julia_key_hook.c  julia_point.c  key_hook.c  main.c  mandelbrot.c  mandelbrot_key_hook.c  mandelbrot_point.c  new_image.c  rose.c  rose_point.c  web.c  web_point.c
